Banner implemented on listing page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
         <item>RM:Malaysian Ringgit</item>
     </string-array>
     <string name="refresh">Refresh</string>
+    <string name="banner_fail">Database error</string>
     <string name="db_fail">Database error</string>
     <string name="for_him">For Him</string>
     <string name="for_her">For Her</string>
