--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="for_him">For Him</string>
     <string name="for_her">For Her</string>
     <string name="for_all">For Love</string>
+    <string name="buy_pinkoi">Buy on Pinkoi</string>
     <string name="about_title">Profile</string>
     <string name="about_cc">Clare Chen, an industrial designer from the United States, and an aunt surrounded by nephews and nieces,
         finds it very valuable and interesting of children\'s innocence and all their devilish acts.
